Fixed bug #899: Create project button distorted : Kanchan

--- a/media/css/plugins/960gd/ie7.css
+++ b/media/css/plugins/960gd/ie7.css
@@ -109,3 +109,11 @@ span.error_arrow,#questionnaire-code-error, label.error_arrow{
 #type_message{
     width: 300px !important;
 }
+
+.create_proj_button a{
+    line-height: 45px;
+}
+
+.all_projects{
+    margin-top: -20px;
+}
